# homelab-knowledge-base

./: .gitmodules  AGENTS.md  CLAUDE.md  pyproject.toml  sync.py
docs/opnsense/: dns-privacy.md
